<resources>

    //Padronizando:
    //Botão: txt_btn
    //Titulo: title_example
    //input: hint_example
    //Descrição: description_example
    //Text Input: title_input_example
    //Example text: text_example_example
    <string name="description_cancel_change">Cancelar alteração</string>
    <string name="description_img_help_center">ilustração de sugestão</string>

    <string name="hint_amount">Insira a quantidade</string>
    <string name="hint_data">Insira a data</string>
    <string name="hint_equipment_type">Selecione o tipo de equipamento</string>
    <string name="hint_floor">Selecione o andar</string>
    <string name="hint_input_life">Insira a vida útil</string>
    <string name="hint_life">Insira a vida útil em horas</string>
    <string name="hint_name">Insira o nome</string>
    <string name="hint_new_password">Insira a nova senha:</string>
    <string name="hint_new_password_again">Digite novamente a senha</string>
    <string name="hint_power">Insira a potência</string>
    <string name="hint_qrcode">Escaneie ou insira o qr-code</string>
    <string name="hint_room">Selecione uma sala</string>

    <string name="title_contact_email">Email: contato@autg.com.br</string>
    <string name="title_login">Login</string>
    <string name="title_contact_information">Informações de contato</string>
    <string name="title_contact_telephone">Telefone: (11) 0000-1111</string>
    <string name="title_equipaments">Equipamentos</string>
    <string name="title_help_center">Central de ajuda</string>
    <string name="title_home">Home</string>
    <string name="title_input_amount">Quantidade:</string>
    <string name="title_consumption_summary">Resumo de consumo</string>
    <string name="title_input_consuming_equipments">Consumo/Equipamentos</string>
    <string name="title_input_date_installation">Data de instalação:</string>
    <string name="title_input_data_end">Data:</string>
    <string name="title_input_time">Horário:</string>
    <string name="title_input_data_start">Data final:</string>
    <string name="title_input_edit_equipment">Editar equipamento</string>
    <string name="title_input_equipament_type">Tipo de equipamento:</string>
    <string name="title_input_filter">Filtrar:</string>
    <string name="title_input_floor">Andar:</string>
    <string name="title_input_life">Vida útil:</string>
    <string name="title_input_scheduling_function">Função do agendamento:</string>
    <string name="title_input_name">Nome:</string>
    <string name="title_input_new_scheduling">Novo agendamento</string>
    <string name="title_input_old_password">Senha antiga:</string>
    <string name="title_input_new_password_again">Digite novamente:</string>
    <string name="title_input_new_password">Nova senha</string>
    <string name="title_input_oncln">On Cln</string>
    <string name="title_input_password">Senha:</string>
    <string name="title_input_power">Potência:</string>
    <string name="title_input_qr_code">Qr-Code:</string>
    <string name="title_register_edit">Cadastrar/Editar</string>
    <string name="title_edit_room">Editar Sala</string>
    <string name="title_input_room">Sala:</string>
    <string name="title_edit_scheduling">Editar Agendamento</string>
    <string name="title_input_scheduling">Agendamentos</string>
    <string name="title_input_user">Usuário:</string>
    <string name="title_register_equipment">Cadastrar Equipamento</string>
    <string name="title_register_oncln">Cadastrar On-Cln</string>
    <string name="title_oncln">On-Cln cadastrados</string>
    <string name="title_register_room">Cadastrar sala</string>
    <string name="title_equipment_room">Equipamentos da sala</string>
    <string name="title_rooms">Salas</string>
    <string name="title_settings">Configurações</string>
    <string name="title_to_schedule">Agendar</string>
    <string name="title_change_password">Alterar senha</string>

    <string name="txt_register">Cadastrar</string>
    <string name="txt_btn_in_use">Em uso</string>
    <string name="txt_btn_edit">Editar</string>
    <string name="txt_btn_delete">Deletar</string>
    <string name="txt_answer_ok">Cadastrado com sucesso</string>
    <string name="txt_answer_error">Erro ao cadastrar</string>
    <string name="txt_btn_cancel">Cancelar</string>
    <string name="txt_btn_idle">Ociosas</string>
    <string name="txt_btn_registers">Cadastradas</string>
    <string name="txt_enter_otherwise">Entrar de outra forma</string>
    <string name="txt_btn_enter">Entrar</string>
    <string name="txt_btn_save_editions">Salvar alteração</string>
    <string name="txt_btn_save">Salvar</string>
    <string name="txt_btn_support">Suporte 24h</string>
    <string name="txt_dark_mode">Modo dark</string>
    <string name="txt_name_user">Jonas Bezerra</string>
    <string name="txt_search">Pesquisar</string>
    <string name="txt_total">Tota(1)</string>
    <string name="app_name">OnCln</string>
    <string name="txt_air">Ar condicionado</string>
    <string name="txt_set_of_lamps">Conjunto de lâmpadas</string>
    <string name="txt_socket_set">Conjunto de tomadas</string>
    <string name="txt_offline_system">Sem conexão com servidor</string>
    <string name="txt_invalid_login">Login inválido</string>

    <string name="text_example">Text example</string>
    <string name="text_example_power">200</string>
    <string name="text_confirm_delete">Tem certeza que deseja deletar?</string>
    <string name="text_example_id">Id:123</string>
    <string name="text_example_air_conditioning">Ar condicionado 1</string>
    <string name="text_example_floor">Andar: 2º</string>
    <string name="text_example_data_end" >Data final: 28/03/2022</string>
    <string name="text_example_data_start">Data inicial: 28/03/2022</string>
    <string name="text_example_time">Horário: 08:50</string>
    <string name="text_example_action">Ação: Ligar</string>
    <string name="text_example_room">Sala de reuniões</string>
    <string name="title_activity_equipamento_por_sala">EquipamentoPorSalaActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="text_on">ligar</string>
    <string name="text_off">desligar</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

</resources>