<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card"
    style="?attr/materialCardViewElevatedStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dimen_small_8"
    app:cardCornerRadius="@dimen/dimen_medium_16"
    app:cardElevation="@dimen/dimen_small_8"
    app:strokeWidth="0dp">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/gray"
        android:gravity="center|start"
        android:padding="@dimen/dimen_small_8">

        <LinearLayout
            android:id="@+id/layout_linear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/dimen_small_4">

            <TextView
                android:id="@+id/txt_room"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/readex_pro_medium"
                android:textColor="@color/blue_secondary"
                android:textSize="@dimen/dimen_medium_18_txt"
                android:textStyle="bold"
                tools:text="@string/text_example_room" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txt_floor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/readex_pro_medium"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dimen_medium_16_txt"
                    tools:text="@string/text_example_floor" />

                <TextView
                    android:id="@+id/txt_action"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_large_24"
                    android:fontFamily="@font/readex_pro_medium"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dimen_medium_16_txt"
                    tools:text="@string/text_example_action" />
            </LinearLayout>

            <TextView
                android:id="@+id/txt_data_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/readex_pro_medium"
                android:textColor="@color/gray_tertiary"
                android:textSize="@dimen/dimen_medium_16_txt"
                tools:text="@string/text_example_data_start" />

            <TextView
                android:id="@+id/txt_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/readex_pro_medium"
                android:textColor="@color/gray_tertiary"
                android:textSize="@dimen/dimen_medium_16_txt"
                tools:text="@string/text_example_time" />
        </LinearLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="vertical">

            <Button
                android:id="@+id/botao_editar"
                style="@style/Botao.edit_delet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/gray_secondary"
                android:text="@string/txt_btn_edit"
                android:paddingHorizontal="@dimen/dimen_medium_20"
                app:icon="@drawable/ic_edit" />

            <Button
                android:id="@+id/botao_excluir"
                style="@style/Botao.edit_delet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/red"
                android:text="@string/txt_btn_delete"
                app:icon="@drawable/ic_delete" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>


</com.google.android.material.card.MaterialCardView>