<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dimen_medium_16"
    tools:context=".MainActivity">

    <include
        android:id="@+id/include_text"
        layout="@layout/item_underlined_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_large_24"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/include_text">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/readex_pro_medium"
            android:text="@string/title_input_room"
            android:layout_marginTop="@dimen/dimen_medium_16"
            android:textColor="?attr/colorSecondaryVariant"
            android:textSize="@dimen/dimen_medium_18_txt" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/gray_quaternary"
            app:boxStrokeWidth="0dp">

            <AutoCompleteTextView
                android:id="@+id/select_room"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/black"
                android:hint="@string/hint_room"
                android:inputType="none"
                android:paddingVertical="@dimen/dimen_small_4" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/dimen_small_8"
            android:fontFamily="@font/readex_pro_medium"
            android:text="@string/title_input_floor"
            android:textColor="?attr/colorSecondaryVariant"
            android:textSize="@dimen/dimen_medium_18_txt" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_field_equip"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/gray_quaternary"
            app:boxStrokeWidth="0dp">

            <AutoCompleteTextView
                android:id="@+id/select_equipment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/black"
                android:hint="@string/hint_equipment_type"
                android:inputType="none"
                android:paddingVertical="@dimen/dimen_small_4" />
        </com.google.android.material.textfield.TextInputLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!--->Colocar campos certos<-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen_small_4"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/dimen_small_8"
                    android:fontFamily="@font/readex_pro_medium"
                    android:text="@string/title_input_data_end"
                    android:textColor="?attr/colorSecondaryVariant"
                    android:textSize="@dimen/dimen_medium_18_txt" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxStrokeWidthFocused="0dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_qtd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_data"
                        android:inputType="number"
                        android:textSize="@dimen/dimen_small_12_txt" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen_small_4"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/dimen_small_8"
                    android:fontFamily="@font/readex_pro_medium"
                    android:text="@string/title_input_data_start"
                    android:textColor="?attr/colorSecondaryVariant"
                    android:textSize="@dimen/dimen_medium_18_txt" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_power"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxStrokeWidthFocused="0dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_data"
                        android:inputType="number"
                        android:textSize="@dimen/dimen_small_12_txt" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/dimen_small_8"
            android:fontFamily="@font/readex_pro_medium"
            android:text="@string/title_input_scheduling_function"
            android:textColor="?attr/colorSecondaryVariant"
            android:textSize="@dimen/dimen_medium_18" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeWidthFocused="0dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_function"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_life"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/dimen_small_8"
            android:fontFamily="@font/readex_pro_medium"
            android:text="@string/title_input_time"
            android:textColor="?attr/colorSecondaryVariant"
            android:textSize="@dimen/dimen_medium_18_txt" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeWidthFocused="0dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_life"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_life"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <include
        android:id="@+id/btn_agendamento"
        layout="@layout/btn_blue" />

</androidx.constraintlayout.widget.ConstraintLayout>


