<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#9E000000">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/format_pop_up"
        android:orientation="vertical"
        android:padding="@dimen/dimen_small_8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/readex_pro_medium"
                android:text="@string/title_change_password"
                android:textColor="@color/white"
                android:textSize="@dimen/dimen_large_20_txt" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/botao_cancelarAlteracao"
                android:layout_width="@dimen/dimen_large_31"
                android:layout_height="@dimen/dimen_large_31"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center_vertical"
                android:background="@drawable/ic_x"
                android:contentDescription="@string/description_cancel_change"
                android:src="@drawable/ic_x" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/dimen_medium_20">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/dimen_medium_16"
                android:fontFamily="@font/readex_pro_medium"
                android:text="@string/title_input_old_password"
                android:textColor="@color/white"
                android:textSize="@dimen/dimen_medium_16_txt" />

            <EditText
                android:id="@+id/edit_senha_antiga"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/readex_pro_medium"
                android:hint="@string/hint_new_password"
                android:inputType="textPassword"
                android:minHeight="@dimen/dimen_large_50"
                android:textColor="@color/white"
                android:textColorHighlight="@color/white"
                android:textColorHint="@color/white"
                android:textSize="14sp"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/dimen_medium_16_txt"
                android:fontFamily="@font/readex_pro_medium"
                android:text="@string/title_input_new_password"
                android:textColor="@color/white"
                android:textSize="@dimen/dimen_medium_16_txt" />

            <EditText
                android:id="@+id/edit_nova_senha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/readex_pro_medium"
                android:hint="@string/hint_new_password"
                android:inputType="textPassword"
                android:minHeight="@dimen/dimen_large_50"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/dimen_medium_16_txt"
                android:fontFamily="@font/readex_pro_medium"
                android:text="@string/hint_new_password_again"
                android:textColor="@color/white"
                android:textSize="@dimen/dimen_medium_16_txt" />

            <EditText
                android:id="@+id/edit_nova_senha_confirmacao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/readex_pro_medium"
                android:hint="@string/hint_new_password_again"
                android:inputType="textPassword"
                android:minHeight="@dimen/dimen_large_50"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/botao_salvar_alteracao"
                style="@style/Botao.Branco"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_small_12_txt"
                android:text="@string/txt_btn_save_editions" />
        </LinearLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>